# ProjectPHI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00_index.md  01_pipeline_overview.md  02_architecture.md  03_pydeid_behaviour.md  04_ProjectPHI_behaviour.md  05_configuration.md  06_privacy_and_audit_notes.md  07_semantic_preservation.md  08_examples.md  09_current_limitations.md  10_longitudinal_timeline_deid_plan.md
full_note_smoke_tests/: README.md
full_note_smoke_tests/15_external_examples/: README.md  audit_output.csv  deidentified_output.csv  input_notes.csv  source_manifest.csv  terminal_view.txt
full_note_smoke_tests/30_synthetic_examples/: README.md  audit_output.csv  custom_doctor_names.json  custom_regexes.json  deidentified_output.csv  input_notes.csv  patient_aliases.csv  provider_aliases.csv  run_smoke_test.py  source_manifest.csv  terminal_view.txt
full_note_smoke_tests/coding_agent_review_summaries/: README.md  aggregate_summary.md
full_note_smoke_tests/external_review_summaries/: README.md  aggregate_summary.md
src/project_phi/: __init__.py  audit.py  cli.py  config_loaders.py  csv_adapter.py  custom_regex.py  date_shift.py  models.py  normalization.py  note.py  patient_batch.py  patient_names.py  protected_terms.py  provider_names.py  pydeid_client.py  reconstruction.py  scratch.py  title_context.py  (+1 more)
tests/: conftest.py  test_audit_privacy.py  test_cli.py  test_clinical_code_veto.py  test_config_loaders.py  test_contact_overlap_repair.py  test_csv_adapter.py  test_custom_regex.py  test_date_shift.py  test_decimal_code_veto.py  test_patient_batch.py  test_patient_names.py  test_protected_terms.py  test_provider_names.py  test_synthetic_end_to_end.py  test_title_context_veto.py  test_wrapper_basic.py
(+25 files in other folders)
