[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "project-phi"
version = "0.1.0"
description = "Ontario clinical text de-identification wrapper around pyDeid."
requires-python = ">=3.11"
authors = [
    { name = "Thomas Swanick", email = "thomas.swanick@mail.utoronto.ca" },
]
maintainers = [
    { name = "Thomas Swanick", email = "thomas.swanick@mail.utoronto.ca" },
]
license = { text = "MIT" }
dependencies = [
    "numpy<2",
    "pyDeid @ git+https://github.com/GEMINI-Medicine/pyDeid.git@f93d2ddb1fd857236b2d3b4b761af2b8028c7281",
    "setuptools<81",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
project-phi-deid = "project_phi.cli:main"

[project.urls]
Homepage = "https://github.com/swanickt/ProjectPHI"
Repository = "https://github.com/swanickt/ProjectPHI"
Issues = "https://github.com/swanickt/ProjectPHI/issues"
pyDeid = "https://github.com/GEMINI-Medicine/pyDeid"

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_phi*"]
